<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clutter</string>
    <string name="action_settings">Settings</string>
    <string name="credits">Created using Swipecards by Dionysis Lorentzos. All code is available on GitHub, which is linked on my website. Please feel free to send feedback.</string>
    <string name="done">:)</string>
    <string name="restart">Again</string>
    <string name="keep">Yes</string>
    <string name="delete">No</string>
    <string name="do_you_need">Do you need</string>
    <string name="pref_buttons">Show buttons</string>
    <string name="pref_progress">Show progress</string>
    <string name="restart_activity">Restart</string>
    <string name="restart_summary">Go again from the top</string>
    <string name="me">The developer</string>
    <string name="the_app">The app</string>
    <string name="me_summary">I\'m a second year computer science student at the University of California, Berkeley. To contact me, tap here to go to my site.</string>
    <string name="default_app_title">this app?</string>
    <string name="default_activity_title">Time for a little spring cleaning</string>


</resources>
