<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/rounded_corners"
    android:layout_width="275dp"
    android:layout_height="325dp"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:layout_gravity="top|center"
        android:layout_marginBottom="150dp"
        >


        <ImageView
            android:id="@+id/icon"
            android:gravity="center"
            android:src="#607D8B"
            android:layout_width="192px"
            android:layout_height="192px"
            android:layout_gravity="center"
            />



        </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="35dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#546E7A"
                android:fontFamily="sans-serif-light"
                android:text="@string/do_you_need"/>

            <me.grantland.widget.AutofitTextView
                android:id="@+id/name"
                android:textSize="24sp"
                autofit:minTextSize="1sp"
                android:textColor="#455A64"
                android:gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_app_title"
                android:layout_width="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_height="50dp"
                android:singleLine="true"
                android:paddingBottom="15dp"/>
        </LinearLayout>




    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="1.25dp"

        android:background="@android:color/transparent"

        android:layout_gravity="bottom|center">


            <Button
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:textAllCaps="false"
                android:text="@string/delete"
                android:fontFamily="sans-serif-light"
                android:textColor="#455A64"
                android:background="@drawable/button_design"
                android:layout_height="wrap_content"
                android:onClick="swipeLeft"
                android:id="@+id/delete"/>




            <Button
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:textAllCaps="false"
                android:text="@string/keep"
                android:fontFamily="sans-serif-light"
                android:textColor="#455A64"
                android:background="@drawable/button_design_keep"
                android:layout_height="wrap_content"
                android:onClick="swipeRight"
                android:id="@+id/keep"/>


    </LinearLayout>


    <ImageView
        android:id="@+id/item_swipe_left_indicator"
        android:alpha="0"
        android:scaleType="center"
        android:src="@drawable/ic_close_white_36dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/del_rect" />

    <ImageView
        android:id="@+id/item_swipe_right_indicator"
        android:alpha="0"
        android:scaleType="center"
        android:src="@drawable/ic_check_white_36dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/keep_rect" />


</FrameLayout>